result/HTML/fp40.htm.err
./test/HTML/fp40.htm:153: error: htmlParseEntityRef: no name
technical articles from Microsoft's extensive Knowledge Base, FAQs, & troublesh
                                                                     ^
